--- a/SpriteEditor/MainWindow.xaml
+++ b/SpriteEditor/MainWindow.xaml
@@ -8,35 +8,46 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Редактор спрайтов" WindowState="Maximized" Height="450" Width="800">
     <DockPanel>
+        <MediaElement x:Name="mainSoundPlayer" Visibility="Collapsed" LoadedBehavior="Manual" />
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
                 <MenuItem Header="Создать спрайтшит" Click="CreateSpriteSheetHandler" />
                 <MenuItem x:Name="saveSpriteSheetLabel" IsEnabled="False" Header="Сохранить спрайтшит" Click="SaveSpriteSheetHandler" />
                 <MenuItem x:Name="closeProjectBtn" IsEnabled="False" Header="Закрыть проект" Click="CloseProjectHandler" />
             </MenuItem>
+            <MenuItem Header="Правка">
+                <MenuItem x:Name="addSpriteBtn" IsEnabled="False" Header="Добавить спрайт" Click="AddSpriteHandler" />
+                <MenuItem x:Name="removeSpriteBtn" IsEnabled="False" Header="Удалить спрайт" Click="RemoveSpriteHandler" />
+            </MenuItem>
+            <MenuItem Header="Вид">
+                <MenuItem x:Name="spriteSettingsBtn" IsEnabled="False" Header="Настройки спрайта" Click="ToggleSpriteSettingsHandler" />
+            </MenuItem>
+            <MenuItem Header="Помощь">
+                <MenuItem Header="Обучение" Click="GetTutorialHandler" />
+            </MenuItem>
         </Menu>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="65" Background="Green">
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="65" Background="White">
             <StackPanel MouseUp="CreateSpriteSheetLabelHandler" Margin="20, 5">
                 <materialDesign:PackIcon Margin="35, 0" Foreground="Blue" Width="35" Height="35" Kind="FolderOutline" />
                 <TextBlock Text="Создать спрайтшит" />
             </StackPanel>
-            <StackPanel x:Name="saveSpriteSheetBtn" IsEnabled="False" Margin="20, 5">
+            <StackPanel x:Name="saveSpriteSheetBtn" IsEnabled="False" Margin="20, 5" MouseUp="SaveSpriteSheetLabelHandler">
                 <materialDesign:PackIcon Margin="35, 0" Foreground="Gray" Width="40" Height="35" Kind="ContentSave" />
                 <TextBlock Text="Сохранить спрайтшит" />
             </StackPanel>
-            <StackPanel x:Name="addSpriteBtn" Margin="200, 5, 20, 0" IsEnabled="False" MouseUp="AddSpriteHandler">
+            <StackPanel x:Name="addSpriteLabel" Margin="200, 5, 20, 0" IsEnabled="False" MouseUp="AddSpriteLabelHandler">
                 <materialDesign:PackIcon Margin="20, 0" Foreground="Gray" Width="40" Height="35" Kind="FileImageAdd" />
                 <TextBlock Text="Добавить спрайт" />
             </StackPanel>
-            <StackPanel x:Name="removeSpriteBtn" Margin="20, 5" IsEnabled="False" MouseUp="ExpandRemoveSpriteHandler">
+            <StackPanel x:Name="removeSpriteLabel" Margin="20, 5" IsEnabled="False" MouseUp="ExpandRemoveSpriteHandler">
                 <materialDesign:PackIcon Margin="20, 0" Foreground="Gray" Width="40" Height="35" Kind="FileImageRemoveOutline" />
                 <TextBlock Text="Удалить спрайт" />
             </StackPanel>
-            <StackPanel x:Name="toggleSpriteSheetSettingsBtn" Margin="20, 5" IsEnabled="False" MouseUp="ToggleSpriteSettings">
+            <StackPanel x:Name="toggleSpriteSheetSettingsBtn" Margin="20, 5" IsEnabled="False" MouseUp="ToggleSpriteSettingsLabelHandler">
                 <materialDesign:PackIcon Margin="30, 0" Foreground="Gray" Width="40" Height="35" Kind="ImageEditOutline" />
                 <TextBlock Text="Настройки спрайта" />
             </StackPanel>
-            <StackPanel Margin="200, 5, 20, 5" MouseUp="ExpandRemoveSpriteHandler">
+            <StackPanel Margin="200, 5, 20, 5" MouseUp="GetTutorialLabelHandler">
                 <materialDesign:PackIcon Margin="10, 0" Foreground="Blue" Width="40" Height="35" Kind="School" />
                 <TextBlock Text="Обучение" />
             </StackPanel>
@@ -56,8 +67,8 @@
                 <TextBlock Text="Показывать контур" />
             </StackPanel>
         </StackPanel>
-        <ScrollViewer x:Name="openedSprites" Visibility="Collapsed" DockPanel.Dock="Left">    
-            <StackPanel Width="200" Background="Cyan">
+        <ScrollViewer x:Name="openedSprites" Visibility="Collapsed" DockPanel.Dock="Left">
+            <StackPanel Width="200" Background="White">
                 <StackPanel Background="LightGray">
                     <TextBlock Margin="10" Text="Спрайты" />
                 </StackPanel>
@@ -66,7 +77,7 @@
             </StackPanel>
         </ScrollViewer>
         <ScrollViewer x:Name="spriteSheetSettings" Visibility="Collapsed" DockPanel.Dock="Right">
-            <StackPanel Width="265" Background="Pink">
+            <StackPanel Width="265" Background="White">
                 <Border BorderBrush="Gray" BorderThickness="1">
                     <StackPanel Background="LightGray">
                         <TextBlock Margin="10" Text="Настройки" />
@@ -78,6 +89,28 @@
                         <TextBlock Text="Данные" VerticalAlignment="Center" Margin="10" />
                     </StackPanel>
                 </Border>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Формат данных" Margin="10, 0" />
+                    <TextBox IsReadOnly="True" Text="Unity" Width="100" Margin="10, 2" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Файл данных" Margin="10, 8" />
+                    <TextBox IsReadOnly="True" Text="" Margin="10, 8" Width="90" />
+                    <materialDesign:PackIcon MouseUp="ClearTextureFileHandler" Margin="5, 10" Kind="Close" Foreground="Red" />
+                    <materialDesign:PackIcon MouseUp="SetTextureFileHandler" Margin="5, 10" Kind="Folder" Foreground="Cyan" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Обрезать названия спрайтов" Margin="10, 0" />
+                    <CheckBox Margin="10, 2" Click="ToggleSpriteOutlineHandler" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Подготовить имя папки" Margin="10, 0" />
+                    <CheckBox Margin="10, 2" Click="ToggleSpriteOutlineHandler" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Путь к текстуре" Margin="10, 0" />
+                    <TextBox Width="100" Margin="10, 2" />
+                </StackPanel>
                 <Border BorderBrush="Gray" BorderThickness="1, 0, 1, 1">
                     <StackPanel Orientation="Horizontal" Background="LightGray">
                         <materialDesign:PackIcon Margin="10" Kind="ArrowDropDown" />
@@ -130,14 +163,51 @@
                         <TextBlock Text="Макет" VerticalAlignment="Center" Margin="10" />
                     </StackPanel>
                 </Border>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Макс. размер" Margin="10, 0" />
+                    <ComboBox SelectedIndex="0" Width="60" SelectionChanged="SetMaxWidthHandler">
+                        <ComboBoxItem DataContext="2048" Content="2048" />
+                        <ComboBoxItem DataContext="1024" Content="1024" />
+                        <ComboBoxItem DataContext="512" Content="512" />
+                    </ComboBox>
+                    <TextBlock Text="X" Margin="10, 0" />
+                    <ComboBox SelectedIndex="0" Width="60" SelectionChanged="SetMaxHeightHandler">
+                        <ComboBoxItem DataContext="2048" Content="2048" />
+                        <ComboBoxItem DataContext="1024" Content="1024" />
+                        <ComboBoxItem DataContext="512" Content="512" />
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Фикс. размер" Margin="10, 0" />
+                    <ComboBox SelectedIndex="0" Width="60" SelectionChanged="SetFixedWidthHandler">
+                        <ComboBoxItem DataContext="2048" Content="2048" />
+                        <ComboBoxItem DataContext="1024" Content="1024" />
+                        <ComboBoxItem DataContext="512" Content="512" />
+                    </ComboBox>
+                    <TextBlock Text="X" Margin="10, 0" />
+                    <ComboBox SelectedIndex="0" Width="60" SelectionChanged="SetFixedHeightHandler">
+                        <ComboBoxItem DataContext="2048" Content="2048" />
+                        <ComboBoxItem DataContext="1024" Content="1024" />
+                        <ComboBoxItem DataContext="512" Content="512" />
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0, 15">
+                    <TextBlock Text="Границы размера" Margin="10, 0" />
+                    <ComboBox SelectedIndex="0" Width="60" SelectionChanged="SetSizeConstraintsHandler">
+                        <ComboBoxItem DataContext="0X0" Content="Любой размер" />
+                        <ComboBoxItem DataContext="2048X2048" Content="2048X2048" />
+                        <ComboBoxItem DataContext="1024X1024" Content="1024X1024" />
+                        <ComboBoxItem DataContext="512X512" Content="512X512" />
+                    </ComboBox>
+                </StackPanel>
             </StackPanel>
         </ScrollViewer>
         <DockPanel Background="Gray">
             <ScrollViewer HorizontalScrollBarVisibility="Visible" DockPanel.Dock="Top" VerticalScrollBarVisibility="Visible">
-                <Canvas x:Name="rawCanvas" Loaded="CanvasInitializedHandler" HorizontalAlignment="Stretch" Margin="50 120" VerticalAlignment="Stretch" DockPanel.Dock="Bottom" ClipToBounds="True">
+                <Canvas DataContext="first" x:Name="rawCanvas" SizeChanged="CanvasStretchHandler" Loaded="CanvasInitializedHandler" HorizontalAlignment="Stretch" Margin="50 120" VerticalAlignment="Stretch" DockPanel.Dock="Bottom" ClipToBounds="True">
                     <Viewbox Stretch="Fill" x:Name="zoom">
                         <Viewbox.Child>
-                            <Canvas MouseUp="ResetSelectionHandler" DockPanel.Dock="Top" x:Name="canvas">
+                            <Canvas DataContext="second" SizeChanged="CanvasStretchHandler" MouseUp="ResetSelectionHandler" DockPanel.Dock="Top" x:Name="canvas">
                                 <Canvas.Background>
                                     <ImageBrush ImageSource="https://thumbs.dreamstime.com/b/%D0%B1%D0%B5%D0%B7%D1%88%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5-loopable-%D0%B0%D0%B1%D1%81%D1%82%D1%80%D0%B0%D0%BA%D1%82%D0%BD%D1%8B%D0%B5-%D1%88%D0%B0%D1%85%D0%BC%D0%B0%D1%82%D1%8B-%D0%B8%D0%BB%D0%B8-%D1%84%D0%BE%D0%BD-%D0%B2%D0%B8%D0%B4%D0%B0-%D1%81%D0%B5%D1%82%D0%BA%D0%B8-png-%D1%81%D0%B5%D1%80%D1%8B%D1%85-180948787.jpg" />
                                 </Canvas.Background>
